navigation bar completed

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
       <title>Colmar Academy</title>
       <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
       <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet">
     </head>
     <body>
 
-  <!-- Navigation Bar -->
+  <!-- Navigation bar -->
       <nav>
         <img src="resources/images/ic-logo.svg" alt="school logo"/>
-        <span>COLMARACADEMY</span>
+        <span class="name"><strong>COLMAR</strong>ACADEMY</span>
         <ul>
           <li>On campus</li>
           <li>Online</li>
@@ -27,7 +28,7 @@
        </div>
 
 
-  <!-- Information Section -->
+  <!-- Information section -->
        <div class="information">
          <div class="container-left">
            <img src="resources/images/information-main.jpg" alt="student reading a book"/>
@@ -57,7 +58,7 @@
          </div>
        </div>
 
-  <!-- Courses Section -->
+  <!-- Courses section -->
        <h1>Start learning</h1>
        <div class="courses">
          <div class="software">
@@ -98,7 +99,7 @@
          </div>
        </div>
 
-  <!-- Thesis Section-->
+  <!-- Thesis section-->
       <h1>Thesis exhibit</h1>
       <div class="container-video">
         <video src="resources/videos/thesis.mp4" alt="sped up video of the campus over a day and night"/>
@@ -118,7 +119,7 @@
         </div>
       </div>
 
-  <!-- Footnote -->
+  <!-- Footer -->
 
       <footer>
         <span>© 2016 Colmar Academy. All rights reserved</span>
