--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>Colmar Academy</title>
       <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
       <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lato|Ubuntu:300,400,700" rel="stylesheet">
     </head>
     <body>
 
@@ -21,45 +21,56 @@
        </nav>
   <!-- Banner -->
        <div class="banner">
-        <img src="resources/images/banner.jpg" alt="students working"/>
-        <h1>Learn something new everyday</h1>
-        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-        <span>Start Here</span>
+         <div class="image">
+          <img id="banner" src="resources/images/banner.jpg" alt="students working"/>
+         </div>
+         <div class="text">
+          <h1>Learn something new everyday</h1>
+          <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+          <span class="start-button">Start here</span>
+         </div>
        </div>
 
 
   <!-- Information section -->
        <div class="information">
          <div class="container-left">
-           <img src="resources/images/information-main.jpg" alt="student reading a book"/>
+           <img id="information-main" src="resources/images/information-main.jpg" alt="student reading a book"/>
            <h1>It doesn't hurt to keep practicing</h1>
            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-           <p>Emmanual, Sr Stratagist at Hiring.com</p>
+           <br><p>Emmanual, Sr Stratagist at Hiring.com</p></br>
          </div>
          <div class="container-right">
            <div class="orientation">
-             <img src="resources/images/information-orientation.jpg" alt="college walk way"/>
-             <h2>Orientation date</h2>
-             <p>Tues 10/11 & Wed 10/12: 8am-3pm</p>
-             <a href="#">Read Me</a>
+             <img class ="image" src="resources/images/information-orientation.jpg" alt="college walk way"/>
+             <div class="text">
+               <h2>Orientation date</h2>
+               <p>Tues 10/11 & Wed 10/12: 8am-3pm</p>
+               <a class="link" href="#">Read more</a>
+             </div>
            </div>
            <div class="campus">
-             <img src="resources/images/information-campus.jpg" alt="lecture hall"/>
-             <h2>Our campus</h2>
-             <p>Find which campus is close by you</p>
-             <a href="#">Read Me</a>
+             <img class ="image" src="resources/images/information-campus.jpg" alt="lecture hall"/>
+             <div class="text">
+               <h2>Our campus</h2>
+               <p>Find which campus is close by you</p>
+               <a class="link" href="#">Read more</a>
+             </div>
            </div>
            <div class="guest">
-             <img src="resources/images/information-guest-lecture.jpg" alt="picture of Oliver Sack"/>
-             <h2>Our guest lecture</h2>
-             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-             <a href="#">Read Me</a>
+             <img class ="image" src="resources/images/information-guest-lecture.jpg" alt="picture of Oliver Sack"/>
+             <div class="text">
+               <h2>Our guest lecture</h2>
+               <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+               <a class="link" href="#">Read more</a>
+             </div>
            </div>
          </div>
        </div>
 
   <!-- Courses section -->
-       <h1>Start learning</h1>
+      <div class="courses-container">
+       <h1 class="section-title">Start learning</h1>
        <div class="courses">
          <div class="software">
            <img src="resources/images/course-software.jpg" alt="computer screen on a desk"/>
@@ -98,24 +109,27 @@
            <p>Analytics, Content Marketing, Mobile Marketing</p>
          </div>
        </div>
+     </div>
 
   <!-- Thesis section-->
-      <h1>Thesis exhibit</h1>
-      <div class="container-video">
-        <video src="resources/videos/thesis.mp4" alt="sped up video of the campus over a day and night"/>
-        <h2>Reimagine urban</h2>
-        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-      </div>
-      <div class="container-small">
-        <div class="fisma">
-          <img src="resources/images/thesis-fisma.jpg" alt="work station on a desk"/>
-          <h2>Fisma: Design and Prototype</h2>
-          <p>Designer showcase of new prototype product</p>
+      <h1 class="section-title">Thesis exhibit</h1>
+      <div class="thesis-container">
+        <div class="container-video">
+          <video src="resources/videos/thesis.mp4" alt="sped up video of the campus over a day and night"/>
+          <h2>Reimagine urban</h2>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
         </div>
-        <div class="NY">
-          <img src="resources/images/thesis-now-and-then.jpg" alt="photo of New York skyline"/>
-          <h2>Now and then</h2>
-          <p>Research study about New York</p>
+        <div class="container-small">
+          <div class="fisma">
+            <img src="resources/images/thesis-fisma.jpg" alt="work station on a desk"/>
+            <h2>Fisma: Design and Prototype</h2>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+          <div class="NY">
+            <img src="resources/images/thesis-now-and-then.jpg" alt="photo of New York skyline"/>
+            <h2>Now and then</h2>
+            <p>Research study about New York</p>
+          </div>
         </div>
       </div>
 
