--- a/index.html
+++ b/index.html
@@ -74,39 +74,51 @@
        <div class="courses">
          <div class="software">
            <img src="resources/images/course-software.jpg" alt="computer screen on a desk"/>
-           <h2>Software engineering</h2>
-           <p>COURSES</p>
-           <p>Web Development, Mobile Development, iOT, APIs</p>
+           <div class="text" id="longer">
+             <h2>Software engineering</h2>
+             <p>COURSES</p>
+             <p>Web Development, Mobile Development, iOT, APIs</p>
+           </div>
          </div>
          <div class="computer-art">
            <img src="resources/images/course-computer-art.jpg" alt="picture of a cellphone"/>
-           <h2>Computer art</h2>
-           <p>COURSES</p>
-           <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+           <div class="text">
+             <h2>Computer art</h2>
+             <p>COURSES</p>
+             <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+           </div>
          </div>
          <div class="design">
            <img src="resources/images/course-design.jpg" alt="person with camera"/>
-           <h2>Design</h2>
-           <p>COURSES</p>
-           <p>User Experience Deisgn, User Research, Visual Design</p>
+           <div class="text" id="longer">
+             <h2>Design</h2>
+             <p>COURSES</p>
+             <p>User Experience Deisgn, User Research, Visual Design</p>
+           </div>
          </div>
          <div class="data">
            <img src="resources/images/course-data.jpg" alt="picture of data on a laptop"/>
-           <h2>Data</h2>
-           <p>COURSES</p>
-           <p>Data Science, Big Data, SQL, Data Visualization</p>
-         </div>
+           <div class="text">
+             <h2>Data</h2>
+             <p>COURSES</p>
+             <p>Data Science, Big Data, SQL, Data Visualization</p>
+           </div>
+        </div>
          <div class="business">
            <img src="resources/images/course-business.jpg" alt="a chess board"/>
-           <h2>Business</h2>
-           <p>COURSES</p>
-           <p>Product Development, Business Development, Startup</p>
+           <div class="text">
+             <h2>Business</h2>
+             <p>COURSES</p>
+             <p id="wider">Product Development, Business Development, Startup</p>
+           </div>
          </div>
          <div class="marketing">
            <img src="resources/images/course-marketing.jpg" alt="picture of an iwatch"/>
-           <h2>Marketing</h2>
-           <p>COURSES</p>
-           <p>Analytics, Content Marketing, Mobile Marketing</p>
+           <div class="text">
+             <h2>Marketing</h2>
+             <p>COURSES</p>
+             <p>Analytics, Content Marketing, Mobile Marketing</p>
+           </div>
          </div>
        </div>
      </div>
