thesis section completed

--- a/index.html
+++ b/index.html
@@ -127,20 +127,24 @@
       <h1 class="section-title">Thesis exhibit</h1>
       <div class="thesis-container">
         <div class="container-video">
-          <video src="resources/videos/thesis.mp4" alt="sped up video of the campus over a day and night"/>
+          <video src="resources/videos/thesis.mp4" alt="sped up video of the campus over a day and night" controls> Video not supported</video>
           <h2>Reimagine urban</h2>
           <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
         </div>
         <div class="container-small">
           <div class="fisma">
             <img src="resources/images/thesis-fisma.jpg" alt="work station on a desk"/>
-            <h2>Fisma: Design and Prototype</h2>
-            <p>Designer showcase of new prototype product</p>
+            <div class="thesis-text">
+              <h2>Fisma: Design and Prototype</h2>
+              <p>Designer showcase of new prototype product</p>
+            </div>
           </div>
           <div class="NY">
             <img src="resources/images/thesis-now-and-then.jpg" alt="photo of New York skyline"/>
-            <h2>Now and then</h2>
-            <p>Research study about New York</p>
+            <div class="thesis-text">
+              <h2>Now and then</h2>
+              <p>Research study about New York</p>
+            </div>
           </div>
         </div>
       </div>
