--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
          <div class="text">
           <h1>Learn something new everyday</h1>
           <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-          <span class="start-button" href="#">Start here</span>
+          <span class="start-button"><a href="#">Start here</a></span>
          </div>
        </div>
 
@@ -88,7 +88,7 @@
          <div class="software">
            <img src="resources/images/course-software.jpg" alt="computer screen on a desk"/>
            <div class="text" id="longer">
-             <h2>Software engineering</h2>
+             <h2><a href="#">Software engineering</a></h2>
              <p>COURSES</p>
              <p>Web Development, Mobile Development, iOT, APIs</p>
            </div>
@@ -96,7 +96,7 @@
          <div class="computer-art">
            <img src="resources/images/course-computer-art.jpg" alt="picture of a cellphone"/>
            <div class="text">
-             <h2>Computer art</h2>
+             <h2><a href="#">Computer art</a></h2>
              <p>COURSES</p>
              <p id="wider">Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
            </div>
@@ -104,7 +104,7 @@
          <div class="design">
            <img src="resources/images/course-design.jpg" alt="person with camera"/>
            <div class="text" id="longer">
-             <h2>Design</h2>
+             <h2><a href="#">Design</a></h2>
              <p>COURSES</p>
              <p>User Experience Deisgn, User Research, Visual Design</p>
            </div>
@@ -112,7 +112,7 @@
          <div class="data">
            <img src="resources/images/course-data.jpg" alt="picture of data on a laptop"/>
            <div class="text">
-             <h2>Data</h2>
+             <h2><a href="#">Data</a></h2>
              <p>COURSES</p>
              <p>Data Science, Big Data, SQL, Data Visualization</p>
            </div>
@@ -120,7 +120,7 @@
          <div class="business">
            <img src="resources/images/course-business.jpg" alt="a chess board"/>
            <div class="text">
-             <h2>Business</h2>
+             <h2><a href="#">Business</a></h2>
              <p>COURSES</p>
              <p id="wider">Product Development, Business Development, Startup</p>
            </div>
@@ -128,7 +128,7 @@
          <div class="marketing">
            <img src="resources/images/course-marketing.jpg" alt="picture of an iwatch"/>
            <div class="text">
-             <h2>Marketing</h2>
+             <h2><a href="#">Marketing</a></h2>
              <p>COURSES</p>
              <p>Analytics, Content Marketing, Mobile Marketing</p>
            </div>
